--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
 .App {
   text-align: center;
 }
+
+.header {
+  width: 100%;
+  font-size: 20px;
+  padding: 1em 0;
+  display: flex;
+}
+
+.header-left {
+  flex: 8;
+}
+
+.header-right {
+  flex: 1;
+  overflow: hidden;
+}
