--- a/src/App.css
+++ b/src/App.css
@@ -10,12 +10,18 @@
 
 .header-left {
   flex: 6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.header-left h1 {
+  color: #58b560;
 }
 
 .header-right {
   flex: 4;
   overflow: hidden;
-
   justify-content: center;
   align-items: center;
   display: flex;
